--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       run: npm install -legacy-peer-deps
 
     - name: Run build task
-      run: npm run build
+      run: npm run build:prod
 
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@v5.1.1
